# DockerTest

./: .gitmodules  CMakeLists.txt
DocketProject/: CMakeLists.txt  DocketProject.sln  DocketProject.vcxproj
DocketProject/src/: main.cpp
